src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>income__c</fullName>
        <label>Renta Líquida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loanSetting__c</fullName>
        <label>Escenario Interés</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loanType__c</fullName>
        <label>Tipo Crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OI</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>monthlyPayment__c</fullName>
        <label>Valor Cuota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>monthsWorked__c</fullName>
        <label>Antigüedad Laboral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>motherLastName__c</fullName>
        <label>Apellido Materno</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nacionalidad_cliente__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chileno</fullName>
                    <default>true</default>
                    <label>Chileno</label>
                </value>
                <value>
                    <fullName>Extranjero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nombre_empleador__c</fullName>
        <label>Nombre Empleador</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nombre_referencia__c</fullName>
        <label>Nombre Completo</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productCode__c</fullName>
        <label>Código Producto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reg_matrimonial_cliente__c</fullName>
        <label>Régimen Matrimonial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En Comunidad de Bienes</fullName>
                </value>
                <value>
                    <fullName>Separación de Bienes</fullName>
                </value>
                <value>
                    <fullName>Participación de Ganancias</fullName>
                </value>
                <value>
                    <fullName>Comunidad Civil</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>region_cliente__c</fullName>
        <label>Región Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regi_n</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>region_empleador__c</fullName>
        <label>Región Empleador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regi_n</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>regla_edad__c</fullName>
        <label>Regla Edad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regla_ingreso_minimo__c</fullName>
        <label>Regla Ingreso Mínimo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regla_monto_a_financiar__c</fullName>
        <label>Regla Monto a Financiar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regla_monto_pie_porc_financiar__c</fullName>
        <label>Regla Monto Pie % Financiado</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regla_score_equifax__c</fullName>
        <description>Este campo se creo inicialmente para almacenar la respuesta de equifax. Como no se sabía la respuesta se creo como tipo de texto. sin embargo, debería ser cambiado a Bool en el futuro.</description>
        <label>Regla Score Equifax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regla_valida_morosidad__c</fullName>
        <label>Regla Valida Morosidad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relacion_referencia__c</fullName>
        <label>Tipo Relación</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>respuesta_ef_credito__c</fullName>
        <label>Respuesta Entidad Financiera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Condicionado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>retoma_cliente__c</fullName>
        <label>Valor Retoma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rubro_empleador__c</fullName>
        <label>Rubro Empleador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PESCA</fullName>
                </value>
                <value>
                    <fullName>MINERIA</fullName>
                </value>
                <value>
                    <fullName>PRENSA</fullName>
                </value>
                <value>
                    <fullName>TEXTIL</fullName>
                </value>
                <value>
                    <fullName>COMERCIO</fullName>
                </value>
                <value>
                    <fullName>TRANSPORTE</fullName>
                </value>
                <value>
                    <fullName>MANUFACTURA</fullName>
                </value>
                <value>
                    <fullName>SERVICIOS</fullName>
                </value>
                <value>
                    <fullName>ENERGIA</fullName>
                </value>
                <value>
                    <fullName>ELECTRICIDAD, GAS Y AGUA</fullName>
                </value>
                <value>
                    <fullName>CONSTRUCCION</fullName>
                </value>
                <value>
                    <fullName>COMUNICACIONES</fullName>
                </value>
                <value>
                    <fullName>SERVICIOS FINANCIEROS</fullName>
                </value>
                <value>
                    <fullName>ENTIDADES FISCALES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rut__c</fullName>
        <label>RUT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesChannel__c</fullName>
        <label>Concesionarios</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>importer__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Concesionario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>score_equifax__c</fullName>
        <description>Este campo indica la respuesta textual del reporte de Equifax</description>
        <inlineHelpText>Detalle de respuesta Score Equifax</inlineHelpText>
        <label>Score Equifax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segundo_formulario_ok__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo de control para activar journey MC de segundo formulario completado.</description>
        <label>Segundo Formulario OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Sub-Estado</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Solicita nuevo contacto</fullName>
                </value>
                <value>
                    <fullName>No Contactado</fullName>
                </value>
                <value>
                    <fullName>Datos Erróneos</fullName>
                </value>
                <value>
                    <fullName>Desistido</fullName>
                </value>
                <value>
                    <fullName>Adjudicado</fullName>
                </value>
                <value>
                    <fullName>No Adjudicado</fullName>
                </value>
                <value>
                    <fullName>Solicitud de Crédito</fullName>
                </value>
                <value>
                    <fullName>Evaluación con EEFF</fullName>
                </value>
                <value>
                    <fullName>Replanteamiento Solicitud de Crédito</fullName>
                </value>
                <value>
                    <fullName>Solicitud de Documentación</fullName>
                </value>
                <value>
                    <fullName>Envío de Documentación</fullName>
                </value>
                <value>
                    <fullName>Carta de Aprobación</fullName>
                </value>
                <value>
                    <fullName>Agendamiento Cita en Local</fullName>
                </value>
                <value>
                    <fullName>Reagendamiento Cita en Local</fullName>
                </value>
                <value>
                    <fullName>Derivado a Local</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Condicionado</fullName>
                </value>
                <value>
                    <fullName>Agendado</fullName>
                    <isActive>false</isActive>
                    <label>Agendado</label>
                </value>
                <value>
                    <fullName>Asiste a Concesionario</fullName>
                    <isActive>false</isActive>
                    <label>Asiste a Concesionario</label>
                </value>
                <value>
                    <fullName>En Contactabilidad</fullName>
                    <isActive>false</isActive>
                    <label>En Contactabilidad</label>
                </value>
                <value>
                    <fullName>No Asiste a Concesionario</fullName>
                    <isActive>false</isActive>
                    <label>No Asiste a Concesionario</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>termDescription__c</fullName>
        <label>Plazo Crédito</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>terms__c</fullName>
        <label>Nº de Cuotas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_actividad_cliente__c</fullName>
        <label>Tipo de Actividad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_actividad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_contrato_cliente__c</fullName>
        <label>Tipo Contrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contrata</fullName>
                </value>
                <value>
                    <fullName>Fijo</fullName>
                </value>
                <value>
                    <fullName>Indefinido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_renta_cliente__c</fullName>
        <label>Tipo de Renta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fija</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_residencia_cliente__c</fullName>
        <label>Tipo de Residencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arrienda</fullName>
                </value>
                <value>
                    <fullName>Fiscal o Empresa</fullName>
                </value>
                <value>
                    <fullName>Propia con Deuda</fullName>
                </value>
                <value>
                    <fullName>Propia sin Deuda</fullName>
                </value>
                <value>
                    <fullName>Vive con Familiares</fullName>
                </value>
                <value>
                    <fullName>Vive con Padres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_trabajador_cliente__c</fullName>
        <label>Tipo Trabajador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dependiente</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_vehiculo_portal__c</fullName>
        <label>Tipo Vehículo Portal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Liviano - Nuevo</fullName>
                </value>
                <value>
                    <fullName>Liviano Usado</fullName>
                </value>
                <value>
                    <fullName>Comercial - Nuevo</fullName>
                </value>
                <value>
                    <fullName>Comercial - Usado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>transactionDate__c</fullName>
        <label>Fecha Transacción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>transactionId__c</fullName>
        <label>ID Transacción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionTime__c</fullName>
        <label>Hora Transacción</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>tripletId__c</fullName>
        <label>Id Tripleta</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicleType__c</fullName>
        <label>Tipo de Vehículo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
                <value>
                    <fullName>Usado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>workPhone__c</fullName>
        <label>Fono Comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>workType__c</fullName>
        <label>Situación Laboral</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Candidatos_Aprobados_V_Espinoza</fullName>
        <columns>FULL_NAME</columns>
        <columns>status__c</columns>
        <columns>documentacion_ok__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>segundo_formulario_ok__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>evaluationResult__c</field>
            <operation>contains</operation>
            <value>Equifax Aprueba</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>VIANCO</value>
        </filters>
        <filters>
            <field>status__c</field>
            <operation>notEqual</operation>
            <value>Desistido,Rechazado</value>
        </filters>
        <label>Candidatos Aprobados - V. Espinoza</label>
    </listViews>
    <listViews>
        <fullName>Candidatos_Mercado_Libre</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>evaluationResult__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>channel__c</field>
            <operation>equals</operation>
            <value>MERCADOLIBRE</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>rechazado</value>
        </filters>
        <label>Candidatos Mercado Libre</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>rut__c</columns>
        <columns>channel__c</columns>
        <columns>evaluationResult__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>regla_score_equifax__c</columns>
        <columns>status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>documentos_url__c</columns>
        <columns>formulario_url__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>channel__c</field>
            <operation>equals</operation>
            <value>amicar</value>
        </filters>
        <label>Candidatos Aprobados - Hoy</label>
    </listViews>
    <listViews>
        <fullName>Todos_LEADS</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>evaluationResult__c</columns>
        <columns>channel__c</columns>
        <columns>rut__c</columns>
        <columns>segundo_formulario_ok__c</columns>
        <columns>regla_score_equifax__c</columns>
        <columns>vehicleType__c</columns>
        <columns>termDescription__c</columns>
        <columns>importer__c</columns>
        <columns>carBrandDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>channel__c</field>
            <operation>equals</operation>
            <value>amicar</value>
        </filters>
        <label>Pruebas Canal Virtual</label>
    </listViews>
    <listViews>
        <fullName>Total_Candidatos_Amicar_Dest_came</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>regla_score_equifax__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>segundo_formulario_ok__c</columns>
        <columns>documentacion_ok__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.LAST_UPDATE</field>
            <operation>lessOrEqual</operation>
            <value>1/1/2021 12:00 AM</value>
        </filters>
        <label>Candidatos Amicar/Destácame</label>
    </listViews>
    <recordTypes>
        <fullName>candidato_web</fullName>
        <active>true</active>
        <businessProcess>Lead Web</businessProcess>
        <label>candidato web</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Formato_ID_Credito_Amicar</fullName>
        <active>true</active>
        <description>Verifica que los datos ingresados sean solo numéricos.</description>
        <errorConditionFormula>AND( NOT(ISNUMBER(id_credito_portal__c)),
NOT(ISBLANK(id_credito_portal__c) )
)</errorConditionFormula>
        <errorDisplayField>id_credito_portal__c</errorDisplayField>
        <errorMessage>Este campo solo recibe números.</errorMessage>
    </validationRules>
</CustomObject>